Match the fixes made in forge 1.18